k8s-manifests/base/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: pig
  namespace: eb
spec:
  type: NodePort
  selector:
    app: pig
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30007
