k8s-manifests/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pig
  namespace: eb
spec:
  rules:
    - host: it-camp.innoca.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pig
                port:
                  number: 8000
